# bad-apple

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.production.yml  main.py  pyproject.toml
static/css/: input.css  output.css
static/js/: htmx.js  server-commands.js
templates/: index.html
