[project]
name = "bad-apple"
version = "0.1.0"
description = "Bad Apple using htmx + sse ext. + server-commands ext."
authors = [
    { name = "Christian Tanul", email = "contact@christiantanul.com" },
]
requires-python = "==3.12.*"
readme = "README.md"

dependencies = [
    "fastapi[standard]==0.116.1",            # https://github.com/tiangolo/fastapi
]
